# trek

./: Cargo.toml  README.md  trek-design.md
src/: audit.rs  baseline.rs  cli.rs  config.rs  error.rs  hooks.rs  lock.rs  main.rs  naming.rs  output.rs  preflight.rs  staged.rs  state.rs  ticket.rs  workspace.rs
src/commands/: cleanup.rs  doctor.rs  init.rs  list.rs  mod.rs  path.rs  push.rs  refresh.rs  run.rs  stage.rs  start.rs  status.rs  sync.rs  unstage.rs  where.rs
src/git/: exec.rs  mod.rs  read.rs
tests/: integration.rs
tests/common/: mod.rs
